Agrega el profile.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mi perfil profesional</title>
+        <title>Mi presentación personal</title>
     </head>
     <body>
-        <p>Párrafo con información.</p>
+        <h1>Mi perfil</h1>
+        <p>
+            Mi nombre es <strong>Maria Del Mar Mosquera Caicedo</strong> naci en <b>Buenaventura</b> 
+            el dia <strong>26 de Octubre de 2008</strong> actualmente tengo 15 años y soy una joven
+            apasionada por la tecnología, la innovación y el arte.
+        </p>
+        <a href="profile.html">Conóceme</a>
     </body>
 </html>
