Creación de formulario

--- a/profile.html
+++ b/profile.html
@@ -28,8 +28,7 @@
             <dt>Tecnológicos: </dt>
             <dd>
                 En cuanto a la tecnología me encantan los videojuegos y considero que mi juego
-                favorito es Los Sims 2 ya que me interesa la idea de controlar a personas que creen
-                que su mundo es real ya que nosotros también podríamos ser sims sin saberlo.
+                favorito es Los Sims 2 ya que me encanta la idea de vivir muchas vidas virtuales.
             </dd>
         </dl>
         <h3>Habilidades</h3>
