--- a/Mi artista favorito/index.html
+++ b/Mi artista favorito/index.html
@@ -2,56 +2,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Lana Del Rey</title>
 </head>
 <body>
-    <h1>Lana Del Rey</h1>
-    <img src="LDR2019-cr.jpg" alt="Lana Del Rey" width="200" height="250">
-    <br><br>
+    <header>
+        <h1>Lana Del Rey</h1>
+        <div id="Lanaimg">
+            <img src="lana2.jpeg" alt="" width="200" height="250" class="Lana">
+            <img src="LDR2019-cr.jpg" alt="Lana Del Rey" width="300" height="350" class="Lana">
+            <img src="lana3.jpg" alt="" width="200" height="250" class="Lana">
+        </div>
+            
+    </header>
     <h2>Biografia</h2>
     <p>
-        Elizabeth Woolridge Grant, conocida artísticamente como Lana Del Rey, es una cantante, 
+        Elizabeth Woolridge Grant (21/06/1985), conocida artísticamente como Lana Del Rey, es una cantante, 
         compositora, modelo, actriz, escritora, productora y poetisa estadounidense. 
         Su música se distingue por su sofisticada calidad cinematográfica, su estilo retro 
-        y su exploración del romance trágico, el glamur y la melancolía.
+        y su exploración del romance trágico, el glamur y la melancolía. 
+        <br><br>
+        Su impacto en la industria musical ha sido reconocido ampliamente. La revista estadounidense 
+        Rolling Stone incluyó a Del Rey en su lista de los 200 mejores cantantes de todos los tiempos 
+        en 2023, mientras que su edición británica la distinguió como la mejor compositora 
+        estadounidense del siglo XXI en el mismo año.
     </p>
     <h2>Reseña</h2>
     <p>
-        Personalmente, para mí Lana Del Rey representa lo que significa ser mujer, amar, sentir
+        Personalmente, Lana Del Rey representa lo que significa ser mujer, amar, sentir
         tiene una canción para cada sentimiento y su voz es simplemente angelical. Sus letras
         comunican su historia y su vida de forma alucinante; es capaz de crear universos con música
         y sumergir a los oyentes en ellos. Su álbum Norman Fucking Rockwell es mi favorito porque
         habla sobre amor y encontrar la felicidad en uno mismo; el mensaje que da sobre la felicidad 
-        como una mariposa convierte a Happines is a butterfly en mi canción favorita suya y en una de 
+        como una mariposa convierte a Happiness is a butterfly en mi canción favorita suya y en una de 
         mis canciones favoritas de todos los tiempos. Por último, Lana Del Rey sentó las bases para el
         surgimiento de artistas femeninas que hoy en día son estandarte del girly pop, su influencia es
         innegable no solo en la industria musical sino también en la vida de muchas mujeres como yo.
     </p>
-    <div>
-        <h2>Discografia</h2>
-        <ul>
-            <li><img src="NFR.webp" alt="Norman Fucking Rockweel Cover" width="100" height="100"></li>
-            <li><img src="Ultraviolence.webp" alt="Ultraviolence Cover" width="100" height="100"></li>
-            <li><img src="lust_for_life.jpeg" alt="Lust For Life Cover" width="100" height="100"></li>
-            <li>
-                <img src="ocean_blvd.jpeg" alt="Did you know there's a tunnel ocean blvd." 
-                width="100" height="100">
-            </li>
-            <li>
-                <img src="honeymoon.jpeg" alt="Honeymoon Cover" width="100" height="100">
-            </li>
-            <li>
-                <img src="chemtrails.jpeg" alt="Chemtrail over the country club Cover" 
-                width="100" height="100">
-            </li>
-            <li>
-                <img src="born_to_die.jpeg" alt="Born To Die Cover" width="100" height="100">
-            </li>
-        </ul>
+    <h2>Top tracks</h2>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/00FQb4jTyendYWaN8pK0wa?utm_source=generator" width="95%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <h2>Discografía</h2>
+    <div id="discos">
+        <a href="https://open.spotify.com/intl-es/album/5XpEKORZ4y6OrCZSKsi46A?si=ClR7uYL7TiyHoLpf5mfshg target="_blank" rel="noopener noreferrer">
+            <img src="NFR.webp" alt="Norman Fucking Rockweel Cover" width="200" height="200">
+        </a>
+        <a href="https://open.spotify.com/intl-es/album/1ORxRsK3MrSLvh7VQTF01F?si=TJ5PoJ_1TieEDrEFFFRTPA" target="_blank" rel="noopener noreferrer">
+            <img src="Ultraviolence.webp" alt="Ultraviolence Cover" width="200" height="200">
+        </a>
+        <a href="https://open.spotify.com/intl-es/album/7xYiTrbTL57QO0bb4hXIKo?si=AVE2Tk9FT6CfJSAdtP_r5Q" target="_blank" rel="noopener noreferrer">
+            <img src="lust_for_life.jpeg" alt="Lust For Life Cover" width="200" height="200">
+        </a>
+        <a href="https://open.spotify.com/intl-es/album/5HOHne1wzItQlIYmLXLYfZ?si=DNGRIS8QTV2f0Z2821rSLg" target="_blank" rel="noopener noreferrer">
+            <img src="ocean_blvd.jpeg" alt="Did you know there's a tunnel ocean blvd." width="200" height="200">
+        </a>
+        <a href="https://open.spotify.com/intl-es/album/2DpEBrjCur1ythIZ10gJWw?si=kGTep_YuSzy-TvRzSvme_g" target="_blank">
+            <img src="honeymoon.jpeg" alt="Honeymoon Cover" width="200" height="200">
+        </a>
+        <a href="https://open.spotify.com/intl-es/album/6QeosPQpJckkW0Obir5RT8?si=pe_EBAKNQeWI4dVgB5uTqw" target="_blank">
+            <img src="chemtrails.jpeg" alt="Chemtrail over the country club Cover" width="200" height="200">
+        </a>
+        <a href="https://open.spotify.com/intl-es/album/4vXt6IpMcSnqonljffWlMI?si=iSEZntiaSDKjk96bJvqFCg" target="_blank" rel="noopener noreferrer">
+            <img src="born_to_die.jpeg" alt="Born To Die Cover" width="200" height="200">
+        </a>
+        <a href="https://open.spotify.com/intl-es/album/2wwCc6fcyhp1tfY3J6Javr?si=S0Im42mNSlO2vo2C6PtWog" target="_blank" rel="noopener noreferrer">
+            <img src="blue_banisters.jpeg" alt="Blue Banisters" width="200" height="200">
+        </a>
     </div>
     <h2>Mi cancion favorita</h2>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3lG6OtGDsYAOALxEmubQQm?utm_source=generator" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3lG6OtGDsYAOALxEmubQQm?utm_source=generator&theme=0" width="95%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <h2>Perfiles</h2>
     <h3><a href="https://open.spotify.com/intl-es/artist/00FQb4jTyendYWaN8pK0wa?si=1iRavn47TAGqhRPw03_iNw" target="_blank" rel="noopener noreferrer">Spotify</a></h3>
     <h3><a href="https://www.instagram.com/honeymoon?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer">Instagram</a></h3>
+    <h3><a href="https://www.lanadelrey.com" target="_blank" rel="noopener noreferrer">Sitio Oficial</a></h3>
 </html>
