--- a/Mi artista favorito/index.html
+++ b/Mi artista favorito/index.html
@@ -1,19 +1,19 @@
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
+    <!-- Responsive -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Lana Del Rey</title>
 </head>
 <body>
     <header>
-        <h1>Lana Del Rey</h1>
+        <h1 id="titulo">LANA DEL REY</h1>
         <div id="Lanaimg">
             <img src="lana2.jpeg" alt="" width="200" height="250" class="Lana">
             <img src="LDR2019-cr.jpg" alt="Lana Del Rey" width="300" height="350" class="Lana">
             <img src="lana3.jpg" alt="" width="200" height="250" class="Lana">
-        </div>
-            
+        </div> 
     </header>
     <h2>Biografia</h2>
     <p>
@@ -44,7 +44,7 @@
     <h2>Discografía</h2>
     <div id="discos">
         <a href="https://open.spotify.com/intl-es/album/5XpEKORZ4y6OrCZSKsi46A?si=ClR7uYL7TiyHoLpf5mfshg target="_blank" rel="noopener noreferrer">
-            <img src="NFR.webp" alt="Norman Fucking Rockweel Cover" width="200" height="200">
+            <img src="NFR.webp" alt="Norman Fucking Rockweel Cover" width="200" height="200" title="Norman Fucking Rockwell">
         </a>
         <a href="https://open.spotify.com/intl-es/album/1ORxRsK3MrSLvh7VQTF01F?si=TJ5PoJ_1TieEDrEFFFRTPA" target="_blank" rel="noopener noreferrer">
             <img src="Ultraviolence.webp" alt="Ultraviolence Cover" width="200" height="200">
