--- a/Mi artista favorito/index.html
+++ b/Mi artista favorito/index.html
@@ -29,7 +29,7 @@
     </p>
     <h2>Reseña</h2>
     <p>
-        Personalmente, Lana Del Rey representa lo que significa ser mujer, amar, sentir
+        Personalmente, Lana Del Rey representa lo que significa ser mujer, amar, sentir;
         tiene una canción para cada sentimiento y su voz es simplemente angelical. Sus letras
         comunican su historia y su vida de forma alucinante; es capaz de crear universos con música
         y sumergir a los oyentes en ellos. Su álbum Norman Fucking Rockwell es mi favorito porque
