--- a/Mi artista favorito/index.html
+++ b/Mi artista favorito/index.html
@@ -43,29 +43,29 @@
     <iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/00FQb4jTyendYWaN8pK0wa?utm_source=generator" width="95%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
     <h2>Discografía</h2>
     <div id="discos">
-        <a href="https://open.spotify.com/intl-es/album/5XpEKORZ4y6OrCZSKsi46A?si=ClR7uYL7TiyHoLpf5mfshg target="_blank" rel="noopener noreferrer">
+        <a href="https://open.spotify.com/intl-es/album/5XpEKORZ4y6OrCZSKsi46A?si=ClR7uYL7TiyHoLpf5mfshg" target="_blank" rel="noopener noreferrer">
             <img src="NFR.webp" alt="Norman Fucking Rockweel Cover" width="200" height="200" title="Norman Fucking Rockwell">
         </a>
         <a href="https://open.spotify.com/intl-es/album/1ORxRsK3MrSLvh7VQTF01F?si=TJ5PoJ_1TieEDrEFFFRTPA" target="_blank" rel="noopener noreferrer">
-            <img src="Ultraviolence.webp" alt="Ultraviolence Cover" width="200" height="200">
+            <img src="Ultraviolence.webp" alt="Ultraviolence Cover" width="200" height="200" title="Ultraviolence">
         </a>
         <a href="https://open.spotify.com/intl-es/album/7xYiTrbTL57QO0bb4hXIKo?si=AVE2Tk9FT6CfJSAdtP_r5Q" target="_blank" rel="noopener noreferrer">
-            <img src="lust_for_life.jpeg" alt="Lust For Life Cover" width="200" height="200">
+            <img src="lust_for_life.jpeg" alt="Lust For Life Cover" width="200" height="200" title="Lust For Life">
         </a>
         <a href="https://open.spotify.com/intl-es/album/5HOHne1wzItQlIYmLXLYfZ?si=DNGRIS8QTV2f0Z2821rSLg" target="_blank" rel="noopener noreferrer">
-            <img src="ocean_blvd.jpeg" alt="Did you know there's a tunnel ocean blvd." width="200" height="200">
+            <img src="ocean_blvd.jpeg" alt="Did you know there's a tunnel ocean blvd." width="200" height="200" title="Did you know that there's a tunnel under ocean blvd.">
         </a>
         <a href="https://open.spotify.com/intl-es/album/2DpEBrjCur1ythIZ10gJWw?si=kGTep_YuSzy-TvRzSvme_g" target="_blank">
-            <img src="honeymoon.jpeg" alt="Honeymoon Cover" width="200" height="200">
+            <img src="honeymoon.jpeg" alt="Honeymoon Cover" width="200" height="200" title="Honeymoon">
         </a>
         <a href="https://open.spotify.com/intl-es/album/6QeosPQpJckkW0Obir5RT8?si=pe_EBAKNQeWI4dVgB5uTqw" target="_blank">
-            <img src="chemtrails.jpeg" alt="Chemtrail over the country club Cover" width="200" height="200">
+            <img src="chemtrails.jpeg" alt="Chemtrail over the country club Cover" width="200" height="200" title="Chemtrails over the country club">
         </a>
         <a href="https://open.spotify.com/intl-es/album/4vXt6IpMcSnqonljffWlMI?si=iSEZntiaSDKjk96bJvqFCg" target="_blank" rel="noopener noreferrer">
-            <img src="born_to_die.jpeg" alt="Born To Die Cover" width="200" height="200">
+            <img src="born_to_die.jpeg" alt="Born To Die Cover" width="200" height="200" title="Born To Die">
         </a>
         <a href="https://open.spotify.com/intl-es/album/2wwCc6fcyhp1tfY3J6Javr?si=S0Im42mNSlO2vo2C6PtWog" target="_blank" rel="noopener noreferrer">
-            <img src="blue_banisters.jpeg" alt="Blue Banisters" width="200" height="200">
+            <img src="blue_banisters.jpeg" alt="Blue Banisters" width="200" height="200" title="Blue Banisters">
         </a>
     </div>
     <h2>Mi cancion favorita</h2>
@@ -74,4 +74,5 @@
     <h3><a href="https://open.spotify.com/intl-es/artist/00FQb4jTyendYWaN8pK0wa?si=1iRavn47TAGqhRPw03_iNw" target="_blank" rel="noopener noreferrer">Spotify</a></h3>
     <h3><a href="https://www.instagram.com/honeymoon?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" rel="noopener noreferrer">Instagram</a></h3>
     <h3><a href="https://www.lanadelrey.com" target="_blank" rel="noopener noreferrer">Sitio Oficial</a></h3>
+</body>
 </html>
