--- a/Workshop_tarjeta_de_presentacion/index.html
+++ b/Workshop_tarjeta_de_presentacion/index.html
@@ -1,10 +1,24 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi tarjeta de presentación</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon-32x32.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <title>Mi tarjeta de presentacion</title>
 </head>
 <body>
-    
+    <header>
+        <div id="perfil">
+            <img src="pfp.jpg" alt="" width="150" height="150">
+        </div>
+    </header>
+    <section class="info">
+        <h1 id="nombre">María Del Mar Mosquera</h1>
+        <h3>Programadora</h3>
+    </section>
 </body>
 </html>
