--- a/Workshop_tarjeta_de_presentacion/index.html
+++ b/Workshop_tarjeta_de_presentacion/index.html
@@ -16,7 +16,7 @@
             <img src="pfp.jpg" alt="" width="150" height="150">
         </div>
         <div id="titulo">
-            <h1 style="color: white;">Mi Curriculum</h1>
+            <h1 style="color: white;">Curriculum Vitae</h1>
         </div>
     </header>
     <main>
@@ -24,11 +24,6 @@
             <h2 id="nombre">María Del Mar Mosquera</h2>
             <h3 id="cargo">Estudiante de Frontend</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsa dolorem minima dignissimos nemo quaerat dolore sint reiciendis quos repudiandae. Quae.</p>
-            <ul>
-                <li>item</li>
-                <li>item</li>
-                <li>item</li>
-            </ul>
             <div id="redes">
                 <a href="www.instagram.com" target="_blank">
                     <img src="ig.png" alt="icon">
@@ -43,7 +38,7 @@
         </div>
         <div class="mainInfo">
             <section>
-                <h2 id="bio">Biografía</h2>
+                <h2 id="bio">Información Personal</h2>
                 <p id="parrafoBio">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ullam ipsam saepe atque dolore officia autem totam quaerat a harum veniam ut, ex reprehenderit, ducimus sequi voluptatibus facilis accusantium distinctio doloremque voluptates cupiditate ipsa? Harum sint labore nostrum dolorum itaque ratione, ipsum accusamus pariatur, voluptatibus quis explicabo repudiandae error eaque ab.</p>
             </section>
             <section>
@@ -51,15 +46,21 @@
                 <p id="parrafoEdu">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis eius numquam quibusdam, facilis blanditiis fugit, fugiat magnam deserunt repellendus impedit officiis commodi quasi quae repellat laudantium id provident nam. Amet nam veritatis numquam quibusdam itaque corporis, vero autem tempore facilis?</p>
             </section>
             <section>
-                <h2 id="exp">Experiencia</h2>
-                <div id="infoExp">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia rem esse adipisci accusamus nobis voluptatum, velit corrupti, explicabo corporis eius, laborum neque vitae perferendis placeat earum hic facilis voluptatem voluptas!</p>
-                    <ul>
-                        <li>item</li>
-                        <li>item</li>
-                        <li>item</li>
-                    </ul>
-                </div>
+                <h2 id="exp">Experiencia</h2><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia rem esse adipisci accusamus nobis voluptatum, velit corrupti, explicabo corporis eius, laborum neque vitae perferendis placeat earum hic facilis voluptatem voluptas!</p>
+                <ul>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                </ul>
+            </section>
+            <section>
+                <h2>Habilidades</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id esse, dolor maxime dolorum necessitatibus labore totam consequatur veritatis obcaecati a in ratione qui debitis dicta, eveniet, perferendis repudiandae. Magnam, ut?</p>
+                <ul>
+                    <li>item</li>
+                    <li>item</li>
+                    <li>item</li>
+                </ul>
             </section>
         </div>
     </main>
