--- a/Workshop2/index.html
+++ b/Workshop2/index.html
@@ -14,7 +14,7 @@
         <div class="fondoLateral">
             <div class="lateral">
                 <div id="perfil">
-                    <img src="pfp2.jpg" alt="profile picture" height="150" width="150">
+                    <img src="pfp.jpg" alt="profile picture" height="150" width="150">
                 </div>
                 <div id="infoPersonal">
                     <h2 id="nombre">María Del Mar Mosquera</h2>
